# toy_bank_rust_cli

./: Cargo.toml  README.md  new_instance_old_data  print_test_script.sh  prod_data  transfer  transfer_fail
src/: bank.rs  help.txt  main.rs
tests/: integration_test.rs
