[package]
name = "toy_bank_rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"